# ShogiDL

./: .gitignore  README.md  mcts_player.sh  pyproject.toml  train.py
src/: dataloader.py  features.py  train.py
src/network/: policy_value_resnet.py
src/player/: base_player.py  mcts_player.py  player_base.py
src/uct/: uct_node.py
src/utils/: csa_to_hcpe.py
